# Fast-RTTI

./: CMakeLists.txt  README.md  RTTI.cpp  RTTI.h  RTTI_Meta.h
RTTI/: CMakeLists.txt  RTTI.cpp  RTTI.h  RTTI_Meta.h
Tests/: CMakeLists.txt  test_default_rtti.cpp  test_fast_rtti.cpp
Tests/ClassesDefault/: ClassA.h  ClassB.cpp  ClassB.h  ClassC.h  ClassD.h  ClassE.cpp  ClassE.h
Tests/ClassesFast/: ClassA.cpp  ClassA.h  ClassB.cpp  ClassB.h  ClassC.cpp  ClassC.h  ClassD.cpp  ClassD.h  ClassE.cpp  ClassE.h
